--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@neondatabase/serverless": "^1.0.0",
+    "@next/mdx": "^15.3.1",
+    "@types/mdx": "^2.0.13",
     "bcrypt": "^5.1.1",
     "jose": "^6.0.10",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
